infra/K8S/dotnet-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet
spec:
  selector:
    matchLabels:
      app: dotnet
  template:
    metadata:
      labels:
        app: dotnet
    spec:
      containers:
      - name: dotnet
        image: thitt7/dotnet
        imagePullPolicy: Always
        ports:
        - containerPort: 8001

        readinessProbe:
          httpGet:
            path: /healthz
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 3
          successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-clusterip
spec:
  type: ClusterIP
  selector:
    app: dotnet
  ports:
  - port: 8001
    targetPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-nodeport
spec:
  type: NodePort
  selector:
    app: dotnet
  ports:
  - port: 8001
    targetPort: 8001
    nodePort: 30001
