infra/K8S/next-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next
spec:
  selector:
    matchLabels:
      app: next
  template:
    metadata:
      labels:
        app: next
    spec:
      containers:
      - name: next
        image: next:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: next-clusterip
spec:
  type: ClusterIP
  selector:
    app: next
  ports:
  - port: 4000
    targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: next-lb
spec:
  type: LoadBalancer
  selector:
    app: next
  ports:
  - port: 4000
    targetPort: 4000
